test/modules/standard/FileSystem/fsouza/chdir/no_such_directory.chpl
use FileSystem;
var directory = "no-such-dir";
chdir(directory);
